# xeus-qt-python

./: CMakeLists.txt  README.md  env.yml  kernel_widget.py  my_notebook.ipynb  pyside_kernel_widget.py
.github/workflows/: main.yml
include/xeus-qt-python/: xeus_qt_python_config.hpp
share/jupyter/kernels/xpython/: kernel.json
share/jupyter/kernels/xpython-raw/: kernel.json
src/: x_qt_python_extension.cpp
